<resources>
    <string name="app_name">My Finder</string>
    <string name="title_activity_login">Sign in</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="achiev">Achievements</string>
    <string name="openThird">open Third Activity</string>
    <string name="userRegister">Contact (+92 300 1122 333)</string>
    <string name="userRegisterCode">Paste Code here (123456)</string>

    <!-- Strings related to login -->
    <string name="signup">Register</string>
    <string name="prompt_email">Email</string>
    <string name="register">Create an account</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="reset">Reset</string>
    <string name="displayName">Full Name</string>
    <string name="mobile">Mobile No</string>
    <string name="userAddress">Address</string>
    <string name="nearH">Find nearest Hospitals</string>
    <string name="fndBlood">Find Blood Donor</string>
    <string name="lgout">Log out</string>
    <string name="devinfo">About us</string>
    <string name="bloodinfo">Blood Info</string>


    <string-array name="division_list">
        <item>Karachi</item>
        <item>Lahore</item>
        <item>Faisalabad</item>
        <item>Rawalpindi</item>
        <item>Multan</item>
        <item>Hyderabad</item>
        <item>Gujranwala</item>
        <item>Peshawar</item>
        <item>Rahim Yar Khan</item>
        <item>Quetta</item>

    </string-array>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="Blood_Group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>

    <string name="intro">A platform Where Students can find their lost things and return someone important backup to have some appreciation.</string>
    <string name="our_team">My Profile</string>
    <string name="a">"Name    :    Archana          \nUSN       :    1SI16CS020 \nBranch  :    CSE \n"</string>
    <string name="c">"Name    :    Chinmayi Prakash \nUSN       :    1SI16CS031 \nBranch  :    CSE"</string>
    <string name="k">"Name    :    Aamir Latif   \nJOB       :    Developer \nBranch  :    MicroStarX"</string>
    <string name="forgot_pass">Forgot password? Reset</string>

    <string name="eligibility_">Eligibility Requirements</string>
    <string name="female_">If you are female, you must:\n Be healthy and feeling well\nBe at least 17 years old in most states\nBe at least 5 ft 5 inch\nWeigh at least 150 lbs.</string>
    <string name="male_">If you are male, you must:\nBe healthy and feeling well\nBe at least 17 years old in most states\nBe at least 5 ft 1 inch \nWeigh at least 130 lbs.\n</string>
    <string name="info_">Giving blood saves lives. The blood you give is a lifeline in an emergency and for people who need long-term treatments. Many people would not be alive today if donors had not generously given their blood. \n\nWhy we need you to give blood?\n\n We need over 6000 blood donations every day to treat patients in need for people to give blood.\n\nEach year we need approximately 200000 new donors, as some donors can no longer give blood.Most people between ages of 17-65 are able to give blood. Around half our current donors are over 45.That is why we need more young people to start giving blood.</string>
    <string name="aboutus">This is a demo projects on blood donation and collecting. Our Team Members are: \n
                1. Aamir Latif \n
                2. Hafiz Muhammad Aqeel \n
                3. Muhammad Furqan Sultani \n\n
        Under the Supervision of: \n\n
                    Mr.Yahya Saeed

    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purpose">Purpose</string>
    <string name="password">Password...</string>
    <string name="login">Login</string>
    <string name="need_new_account">Need new Account ?</string>
    <string name="todo">TODO</string>
    <string name="type_a_comment">Type a comment...</string>
    <string name="write_post_quote">Write post quote...</string>
    <string name="post_now">Post Now</string>
    <string name="micro_finder">Micro Finder</string>
    <string name="rating_points">Rating Points</string>
    <string name="please_select_some_stars_and_give_your_feedback">Please Select Some Stars And Give YOur Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="excellent">Excellent</string>
    <string name="very_bad">Very Bad</string>
    <string name="admin_login">Admin Login</string>
    <string name="create_user_account">Create user Account</string>
    <string name="username">username</string>
    <string name="hey_i_am_available_now">hey, i am available now.</string>
    <string name="_92_300_1122_333">+92-300-1122-333</string>
    <string name="section_batch_2000">Section / Batch-2000</string>
    <string name="enter_institute_name">Enter Institute Name</string>
    <string name="update">Update</string>
    <string name="contact_authentication">Contact Authentication</string>
    <string name="authorization_is_a_security_mechanism_used_to_determine_user_client_privileges_or_access_levels_related_to_system_resources_including_computer_programs_files_services_data_and_application_features_authorization_is_normally_preceded_by_authentication_for_user_identity_verification">Authorization is a security mechanism used to determine user/client privileges or access levels related to system resources, including computer programs, files, services, data and application features. Authorization is normally preceded by authentication for user identity verification.</string>
    <string name="verify_your_contact">Verify Your Contact</string>
    <string name="submit">Submit</string>
    <string name="date">Date</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="comment_on">Comment on</string>
    <string name="_0_likes">0 Likes</string>
    <string name="post_description">Post Description...</string>
    <string name="time">Time</string>
    <string name="update_post_on">update post on</string>
    <string name="user_name">User Name</string>
    <string name="comments_text_show_here">Comments text show here...</string>
    <string name="message_on">Message on</string>
    <string name="write_your_status_here">Write your status here!</string>
</resources>
