<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".UserRegisterActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:src="@drawable/finder_icon"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_authentication"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorization_is_a_security_mechanism_used_to_determine_user_client_privileges_or_access_levels_related_to_system_resources_including_computer_programs_files_services_data_and_application_features_authorization_is_normally_preceded_by_authentication_for_user_identity_verification"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contact_input"
            android:layout_marginTop="15dp"
            app:met_floatingLabel="normal"
            android:textSize="20sp"
            android:hint="@string/userRegister"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/verify_code_input"
            android:inputType="number"
            app:met_floatingLabel="normal"
            android:visibility="invisible"
            android:hint="@string/userRegisterCode"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_your_contact"
            android:id="@+id/btn_send_verify_code"
            android:background="@drawable/btn_style"
            android:textColor="#fff"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/btn_verify_code"
            android:visibility="invisible"
            android:background="@drawable/btn_style"
            android:textColor="#fff"/>
    </LinearLayout>
</RelativeLayout>