<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    >
    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <include
            android:id="@+id/aboutInfoBar"
            layout="@layout/appbar"/>
        <TextView
            android:id="@+id/purpose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutInfoBar"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/purpose"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/purpose_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/purpose"
            android:text="@string/intro"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:textStyle="normal"
            />
        <TextView
            android:id="@+id/team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/purpose_text"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="5dp"
            android:text="@string/our_team"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000"
            />
        <TextView
            android:id="@+id/akshat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/team"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/k"
            android:textSize="20sp"
            />
        <ImageView
            android:id="@+id/akshat_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/team"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/akshat_text"
            android:background="@drawable/owner"
            />
    </RelativeLayout>
</ScrollView>