<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".AdminLoginActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/admin_logo_image_layout"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <ImageView
            android:id="@+id/login_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            android:contentDescription="@string/todo" />
        </LinearLayout>

        <EditText
            android:id="@+id/admin_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/admin_logo_image_layout"
            android:hint="Email..."
            android:inputType="textEmailAddress"
            android:background="@drawable/inputs"
            android:padding="4dp"
            android:drawableStart="@drawable/email"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:autofillHints="" />
        <EditText
            android:id="@+id/admin_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/admin_login_email"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/inputs"
            android:padding="4dp"
            android:drawableStart="@drawable/password"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:autofillHints="" />
        <Button
            android:id="@+id/admin_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/admin_login_password"
            android:padding="4dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textColor="@android:color/background_light"
            android:background="@drawable/buttons"
            />
        <TextView
            android:id="@+id/need_new_account_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/admin_login_button"
            android:text="@string/need_new_account"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="23dp"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />
    </RelativeLayout>
</RelativeLayout>