<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".UserProfileActivity"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/profile_back_btn"
                android:src="@drawable/ic_action_back"
                android:background="@android:color/background_light"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/set_profile_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:src="@drawable/profile_image"
                app:civ_border_width="5dp"
                app:civ_border_color="@android:color/holo_blue_light"
                />
            <EditText
                android:id="@+id/set_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_profile_image"
                android:inputType="textMultiLine"
                android:hint="@string/username"
                android:textAlignment="center"
                android:drawableStart="@drawable/edit_profile"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:background="@drawable/inputs"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="6dp"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/set_profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_user_name"
                android:inputType="textMultiLine"
                android:hint="@string/hey_i_am_available_now"
                android:textAlignment="center"
                android:drawableStart="@drawable/edit_status"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:background="@drawable/inputs"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="6dp"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/set_profile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_profile_status"
                android:inputType="textMultiLine"
                android:hint="@string/_92_300_1122_333"
                android:textAlignment="center"
                android:drawableStart="@drawable/edit_status"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:background="@drawable/inputs"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="6dp"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/set_profile_section_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_profile_number"
                android:inputType="textMultiLine"
                android:hint="@string/section_batch_2000"
                android:textAlignment="center"
                android:drawableStart="@drawable/edit_status"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:background="@drawable/inputs"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="6dp"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/set_profile_institute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_profile_section_class"
                android:inputType="textMultiLine"
                android:hint="@string/enter_institute_name"
                android:textAlignment="center"
                android:drawableStart="@drawable/edit_status"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:background="@drawable/inputs"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:padding="6dp"
                android:layout_marginTop="10dp"
                />
            <Button
                android:id="@+id/update_settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_profile_institute"
                android:inputType="textMultiLine"
                android:text="@string/update"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textStyle="bold"
                android:background="@drawable/buttons"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:padding="6dp"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textSize="20sp"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>